--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ margin: -10px -50px;
 text-align:center;
 border-radius: 10px 10px 0 0;
 }
-hr{
+h3{
 margin: 10px -50px;
 border: 0;
 border-top: 1px solid #ccc;
@@ -62,3 +62,61 @@ background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
 #btn_name,#btn_tag{
 margin-left: 10px;
 } */
+.header {
+    padding: 128px 16px;
+    text-align: center;
+    background: #1732aa;
+    color: white;
+    font-size: 30px;
+    height: 100%;
+}
+
+.logo {
+    height: 200px;
+    width: 200px;
+}
+
+.name {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 50px;
+}
+
+.background-image {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: -1;
+    background-size: cover;
+    background-color: rgba(0, 225, 255, 0.349);
+    min-height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+
+
+.scenarios {
+    display: flex;
+}
+
+.block {
+    margin-block-start: 75px;
+    border-color: solid wheat;
+    padding: 30px;
+    height: 150px;
+    display: block;
+    border: none;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.block:hover {
+    background-color: #ddd;
+    color: black;
+}
