--- a/css/input1.css
+++ b/css/input1.css
@@ -1,16 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Damion|Muli:400,600");
+
 body {
   font-family: "Muli", sans-serif;
   background: url("https://www.toptal.com/designers/subtlepatterns/patterns/geometry2.png");
 }
+
 h2 {
   font-family: "Damion", cursive;
   font-weight: 400;
   color: #4caf50;
   font-size: 35px;
   text-align: center;
-  position: relative;
+  /* position: relative; */
 }
+
 h2:before {
   position: absolute;
   content: "";
@@ -20,12 +23,14 @@ h2:before {
   background: #4caf50;
   height: 1px;
 }
+
 h2 i {
   font-style: normal;
   background: #fff;
   position: relative;
   padding: 10px;
 }
+
 :focus {
   outline: none;
 }
@@ -48,7 +53,9 @@ input[type="text"] {
   width: 27.33%;
   margin: 40px 3%;
   position: relative;
-} /* necessary to give position: relative to parent. */
+}
+
+/* necessary to give position: relative to parent. */
 input[type="text"] {
   font: 15px/24px "Lato", Arial, sans-serif;
   color: #333;
@@ -66,8 +73,8 @@ input[type="text"] {
   background: transparent;
 }
 
-.effect-19 ~ .focus-border:before,
-.effect-19 ~ .focus-border:after {
+.effect-19~.focus-border:before,
+.effect-19~.focus-border:after {
   content: "";
   position: absolute;
   top: -1px;
@@ -77,12 +84,14 @@ input[type="text"] {
   background-color: #4caf50;
   transition: 0.4s;
 }
-.effect-19 ~ .focus-border:after {
+
+.effect-19~.focus-border:after {
   top: auto;
   bottom: 0;
 }
-.effect-19 ~ .focus-border i:before,
-.effect-19 ~ .focus-border i:after {
+
+.effect-19~.focus-border i:before,
+.effect-19~.focus-border i:after {
   content: "";
   position: absolute;
   top: 50%;
@@ -92,27 +101,31 @@ input[type="text"] {
   background-color: #4caf50;
   transition: 0.6s;
 }
-.effect-19 ~ .focus-border i:after {
+
+.effect-19~.focus-border i:after {
   left: auto;
   right: 0;
 }
-.effect-19:focus ~ .focus-border:before,
-.effect-19:focus ~ .focus-border:after,
-.has-content.effect-19 ~ .focus-border:before,
-.has-content.effect-19 ~ .focus-border:after {
+
+.effect-19:focus~.focus-border:before,
+.effect-19:focus~.focus-border:after,
+.has-content.effect-19~.focus-border:before,
+.has-content.effect-19~.focus-border:after {
   left: 0;
   width: 100%;
   transition: 0.4s;
 }
-.effect-19:focus ~ .focus-border i:before,
-.effect-19:focus ~ .focus-border i:after,
-.has-content.effect-19 ~ .focus-border i:before,
-.has-content.effect-19 ~ .focus-border i:after {
+
+.effect-19:focus~.focus-border i:before,
+.effect-19:focus~.focus-border i:after,
+.has-content.effect-19~.focus-border i:before,
+.has-content.effect-19~.focus-border i:after {
   top: -1px;
   height: 100%;
   transition: 0.6s;
 }
-.effect-19 ~ label {
+
+.effect-19~label {
   position: absolute;
   left: 14px;
   width: 100%;
@@ -122,8 +135,9 @@ input[type="text"] {
   z-index: -1;
   letter-spacing: 0.5px;
 }
-.effect-19:focus ~ label,
-.has-content.effect-19 ~ label {
+
+.effect-19:focus~label,
+.has-content.effect-19~label {
   top: -18px;
   left: 0;
   font-size: 12px;
@@ -131,156 +145,33 @@ input[type="text"] {
   transition: 0.3s;
 }
 
-.effect-20 ~ .focus-border:before,
-.effect-20 ~ .focus-border:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background-color: #4caf50;
-  transition: 0.3s;
-}
-.effect-20 ~ .focus-border:after {
-  top: auto;
-  bottom: 0;
-  left: auto;
-  right: 0;
-}
-.effect-20 ~ .focus-border i:before,
-.effect-20 ~ .focus-border i:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 2px;
-  height: 0;
-  background-color: #4caf50;
-  transition: 0.4s;
-}
-.effect-20 ~ .focus-border i:after {
-  left: auto;
-  right: 0;
-  top: auto;
-  bottom: 0;
-}
-.effect-20:focus ~ .focus-border:before,
-.effect-20:focus ~ .focus-border:after,
-.has-content.effect-20 ~ .focus-border:before,
-.has-content.effect-20 ~ .focus-border:after {
-  width: 100%;
-  transition: 0.3s;
-}
-.effect-20:focus ~ .focus-border i:before,
-.effect-20:focus ~ .focus-border i:after,
-.has-content.effect-20 ~ .focus-border i:before,
-.has-content.effect-20 ~ .focus-border i:after {
-  height: 100%;
-  transition: 0.4s;
-}
-.effect-20 ~ label {
-  position: absolute;
-  left: 14px;
-  width: 100%;
-  top: 10px;
-  color: #aaa;
-  transition: 0.3s;
-  z-index: -1;
-  letter-spacing: 0.5px;
-}
-.effect-20:focus ~ label,
-.has-content.effect-20 ~ label {
-  top: -18px;
-  left: 0;
-  font-size: 12px;
-  color: #4caf50;
-  transition: 0.3s;
+body {
+  font-family: "Lato", sans-serif
 }
 
-.effect-21 ~ .focus-border:before,
-.effect-21 ~ .focus-border:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 0;
-  height: 2px;
-  background-color: #4caf50;
-  transition: 0.2s;
-  transition-delay: 0.2s;
-}
-.effect-21 ~ .focus-border:after {
-  top: auto;
-  bottom: 0;
-  right: auto;
-  left: 0;
-  transition-delay: 0.6s;
-}
-.effect-21 ~ .focus-border i:before,
-.effect-21 ~ .focus-border i:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 2px;
-  height: 0;
-  background-color: #4caf50;
-  transition: 0.2s;
-}
-.effect-21 ~ .focus-border i:after {
-  left: auto;
-  right: 0;
-  top: auto;
-  bottom: 0;
-  transition-delay: 0.4s;
-}
-.effect-21:focus ~ .focus-border:before,
-.effect-21:focus ~ .focus-border:after,
-.has-content.effect-21 ~ .focus-border:before,
-.has-content.effect-21 ~ .focus-border:after {
-  width: 100%;
-  transition: 0.2s;
-  transition-delay: 0.6s;
-}
-.effect-21:focus ~ .focus-border:after,
-.has-content.effect-21 ~ .focus-border:after {
-  transition-delay: 0.2s;
-}
-.effect-21:focus ~ .focus-border i:before,
-.effect-21:focus ~ .focus-border i:after,
-.has-content.effect-21 ~ .focus-border i:before,
-.has-content.effect-21 ~ .focus-border i:after {
-  height: 100%;
-  transition: 0.2s;
-}
-.effect-21:focus ~ .focus-border i:after,
-.has-conten.effect-21 ~ .focus-border i:after {
-  transition-delay: 0.4s;
-}
-.effect-21 ~ label {
-  position: absolute;
-  left: 14px;
-  width: 100%;
-  top: 10px;
-  color: #aaa;
-  transition: 0.3s;
-  z-index: -1;
-  letter-spacing: 0.5px;
-}
-.effect-21:focus ~ label,
-.has-content.effect-21 ~ label {
-  top: -18px;
-  left: 0;
-  font-size: 12px;
-  color: #4caf50;
-  transition: 0.3s;
+.mySlides {
+  display: none
 }
 
 
+html {
+  scroll-behavior: smooth;
+}
 
 
+#result{
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+}
 
-
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
+table {
+  border-collapse: collapse;
+}
+table,
+th,
+td {
+  border: 1px solid #cecfd5;
+}
+th,
+td {
+  padding: 10px 15px;
+}
