Co-authored-by: Darshan S <darshnyc@gmail.com> Co-authored-by: AlessanderTASC6 <Attu72289@gmail.com>

--- a/css/input1.css
+++ b/css/input1.css
@@ -163,15 +163,30 @@ html {
   font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
 
-table {
-  border-collapse: collapse;
+#container{
+  display: flex;
+  
 }
-table,
-th,
-td {
-  border: 1px solid #cecfd5;
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
 }
 th,
 td {
   padding: 10px 15px;
+}
+thead {
+  background: #395870;
+  color: #fff;
+}
+tbody tr:nth-child(even) {
+  background: #f0f0f2;
+}
+td {
+  border-bottom: 1px solid #cecfd5;
+  border-right: 1px solid #cecfd5;
+}
+td:first-child {
+  border-left: 1px solid #cecfd5;
 }
