--- a/css/input1.css
+++ b/css/input1.css
@@ -8,7 +8,7 @@ body {
 h2 {
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
-  color: #ffffff;
+  color: #1abcb4;
   font-size: 35px;
   text-align: center;
   /* position: relative; */
