--- a/css/input1.css
+++ b/css/input1.css
@@ -81,7 +81,7 @@ input[type="text"] {
   left: 50%;
   width: 0;
   height: 2px;
-  background-color: #4caf50;
+  background-color:  #1abcb4;
   transition: 0.4s;
 }
 
@@ -98,7 +98,7 @@ input[type="text"] {
   left: 0;
   width: 2px;
   height: 0;
-  background-color: #4caf50;
+  background-color:  #1abcb4;
   transition: 0.6s;
 }
 
@@ -141,7 +141,8 @@ input[type="text"] {
   top: -18px;
   left: 0;
   font-size: 12px;
-  color: #4caf50;
+  color: #1abcb4;
+
   transition: 0.3s;
 }
 
@@ -197,4 +198,18 @@ td:first-child {
 }
 .title-end #results{
   text-align: center;
+}
+
+.pop-title{
+  color: white;
+}
+
+.how-to{
+  font-size: 20px;
+}
+
+.step-step{
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-style: normal;
 }
